gerenate swagger doc
